--- a/logviewer/pom.xml
+++ b/logviewer/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://maven.apache.org/POM/4.0.0"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -18,6 +18,11 @@
 		<java.version>17</java.version>
 		<hawtio-version>4.0.0</hawtio-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<plugin.path>sample-plugin</plugin.path>
+		<node-version>v20.12.2</node-version>
+		<yarn-version>v1.22.22</yarn-version>
+		<frontend-maven-plugin-version>1.15.0</frontend-maven-plugin-version>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -39,13 +44,6 @@
 
 	<dependencyManagement>
 		<dependencies>
-			<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-dependencies</artifactId>
-			<version>${spring-boot-version}</version>
-			<type>pom</type>
-			<scope>import</scope>
-		  </dependency> -->
 			<dependency>
 				<groupId>io.hawt</groupId>
 				<artifactId>hawtio-bom</artifactId>
@@ -57,7 +55,77 @@
 	</dependencyManagement>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<!-- Add the plugin build to Spring Boot's static resources -->
+			<resource>
+				<directory>${plugin.path}/build</directory>
+				<targetPath>static</targetPath>
+			</resource>
+		</resources>
 		<plugins>
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<version>${frontend-maven-plugin-version}</version>
+				<configuration>
+					<workingDirectory>${plugin.path}</workingDirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<id>install node and yarn</id>
+						<goals>
+							<goal>install-node-and-yarn</goal>
+						</goals>
+						<configuration>
+							<nodeVersion>${node-version}</nodeVersion>
+							<yarnVersion>${yarn-version}</yarnVersion>
+						</configuration>
+					</execution>
+					<execution>
+						<id>yarn install</id>
+						<goals>
+							<goal>yarn</goal>
+						</goals>
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>yarn build</id>
+						<goals>
+							<goal>yarn</goal>
+						</goals>
+						<configuration>
+							<arguments>build</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>${basedir}/${plugin.path}/build</directory>
+							<includes>
+								<include>**/*</include>
+							</includes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
+						<fileset>
+							<directory>${basedir}/${plugin.path}/node_modules</directory>
+							<includes>
+								<include>**/*</include>
+							</includes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
