--- a/logviewer/pom.xml
+++ b/logviewer/pom.xml
@@ -18,7 +18,7 @@
 		<java.version>17</java.version>
 		<hawtio-version>4.0.0</hawtio-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<plugin.path>sample-plugin</plugin.path>
+		<plugin.path>frontend</plugin.path>
 		<node-version>v20.12.2</node-version>
 		<yarn-version>v1.22.22</yarn-version>
 		<frontend-maven-plugin-version>1.15.0</frontend-maven-plugin-version>
