--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns="http://maven.apache.org/POM/4.0.0"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	<groupId>io.github.erdinc09.springboot.hawtio</groupId>
+    <groupId>io.github.erdinc09.springboot.hawtio</groupId>
     <artifactId>logviewermodules</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Spring Boot Logviewer Modules</name>
@@ -11,7 +11,10 @@
 
     <modules>
         <module>logviewer</module>
-        <module>logviewertester</module>
+        <module>logviewer-logback</module>
+        <module>logviewer-log4j2</module>
+        <module>logviewertester-logback</module>
+        <module>logviewertester-log4j2</module>
     </modules>
 
 </project>
