--- a/logviewer/frontend/package.json
+++ b/logviewer/frontend/package.json
@@ -12,43 +12,29 @@
     "replace-version": "replace __PACKAGE_VERSION_PLACEHOLDER__ $npm_package_version ./build/static/js -r --include=\"*.js\""
   },
   "dependencies": {
-    "@hawtio/react": "^1.2.2",
-    "@patternfly/react-charts": "~6.94.21",
-    "@patternfly/react-core": "~4.278.1",
-    "@patternfly/react-table": "~4.113.7",
+    "@hawtio/backend-middleware": "^1.0.6",
+    "@hawtio/react": "^1.8.1",
+    "@patternfly/react-charts": "~7.4.9",
+    "@patternfly/react-code-editor": "~6.1.0",
+    "@patternfly/react-core": "~5.4.12",
+    "@patternfly/react-table": "~5.3.4",
     "@stomp/stompjs": "^7.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@hawtio/backend-middleware": "^1.0.4",
     "@swc/core": "^1.4.11",
     "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "replace": "^1.2.2",
-    "style-loader": "^3.3.4",
+    "style-loader": "^4.0.0",
     "swc-loader": "^0.2.6",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
-  },
-  "resolutions": {
-    "victory-area": "36.8.6",
-    "victory-bar": "36.8.6",
-    "victory-brush-container": "36.8.6",
-    "victory-core": "36.8.6",
-    "victory-cursor-container": "36.8.6",
-    "victory-create-container": "36.8.6",
-    "victory-legend": "36.8.6",
-    "victory-line": "36.8.6",
-    "victory-pie": "36.8.6",
-    "victory-scatter": "36.8.6",
-    "victory-selection-container": "36.8.6",
-    "victory-shared-events": "36.8.6",
-    "victory-voronoi-container": "36.8.6",
-    "victory-zoom-container": "36.8.6"
+    "typescript": "^5.4.5",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   },
   "browserslist": {
     "production": [
@@ -62,5 +48,5 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.6.0"
 }
