--- a/logviewer/frontend/package.json
+++ b/logviewer/frontend/package.json
@@ -17,6 +17,7 @@
     "@patternfly/react-charts": "~7.4.9",
     "@patternfly/react-code-editor": "~6.1.0",
     "@patternfly/react-core": "~5.4.12",
+    "@patternfly/react-log-viewer": "^5.3.0",
     "@patternfly/react-table": "~5.3.4",
     "@stomp/stompjs": "^7.0.0",
     "react": "^18.3.1",
